Smart Updated commit3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Readily Available Jobs</string>
+    <string name="app_name">RajApp</string>
+    <string name="about_RajApp">RajApp is the best app which helps you to find your favourite job and also helps you to find a  wonderful and a qualified employee.Its greatly helps to link both employees and employeers together and makes work much easier.Its also enable you to interact with each other at your own personal level.Thank You!</string>
+
 </resources>
